Closed Bug 1589114 Opened 5 years ago Closed 5 years ago

[Wayland][Webrender] Resizing/maximizing window fails to render new areas

Categories

(Core :: Widget: Gtk, defect, P2)

71 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- unaffected
firefox69 --- unaffected
firefox70 --- unaffected
firefox71 --- fixed
firefox72 --- fixed

People

(Reporter: ke5trel, Assigned: stransky)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: regression)

Attachments

(4 files)

STR:

  1. Start with MOZ_ENABLE_WAYLAND=true and gfx.webrender.all = true on Ubuntu 19.04.
  2. Resize or maximize the window.

The rendered area of the window does not grow more than the original creation size, new areas appear black.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=1096a169912f7b06f1e58294b83c32ed4bc35909&tochange=5781505ae8f5240455406984b57255cf7d615e76

Regressed by Bug 1587008.

See Also: → 1589147

Yes, we need a similar patch to Webrender as Bug 1587008 is for GL compositor only. Sorry to break it.

Assignee: nobody → stransky
Priority: -- → P2
See Also: 1589147

This is still broken in latest nightly.

Bug 1587008 also broke full-screen YouTube: the window is drawn above where it should be, with a blank part at the bottom and the top cut off. To seek in videos you need to have the mouse cursor below the seek bar on screen.

(In reply to Laurențiu Nicola from comment #5)

Bug 1587008 also broke full-screen YouTube: the window is drawn above where it should be, with a blank part at the bottom and the top cut off. To seek in videos you need to have the mouse cursor below the seek bar on screen.

Can you please file a new bug for it? Thanks.

Flags: needinfo?(grayshade)

Filed bug 1591800.

Flags: needinfo?(grayshade)

(In reply to Martin Stránský [:stransky] from comment #6)

(In reply to Laurențiu Nicola from comment #5)

Bug 1587008 also broke full-screen YouTube: the window is drawn above where it should be, with a blank part at the bottom and the top cut off. To seek in videos you need to have the mouse cursor below the seek bar on screen.

Can you please file a new bug for it? Thanks.

I do believe this is the same bug. Whether it's resizing the window, full screen browsing, or full screen youtube, anything that results in a window larger than the initial size triggers the bug. Smaller windows are fine.

Would it make sense to temporarily revert the fix that introduced this regression? Using a tiling window manager this has left the browser unusable for a while now as only a tiny portion of each window is rendered, often preventing access to tabs and menus.

Related: https://github.com/swaywm/sway/issues/4656

Workaround is to switch gfx.webrender.force-disabled to true in about:config, it is posible to do it in floating mode. It should be fixed soon

Pushed by nbeleuzu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c765fea2aff6 [Watland] Set widget EGL window size for WebRender, r=sotaro

(In reply to Pulsebot from comment #12)

Pushed by nbeleuzu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c765fea2aff6
[Watland] Set widget EGL window size for WebRender, r=sotaro

^ Uh, what's Watland?

Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72

Is there any chance this can be backported to v71?

Comment on attachment 9104522 [details]
Bug 1589114 [Wayland] Set widget EGL window size for WebRender, r=sotaro

Beta/Release Uplift Approval Request

  • User impact if declined: Firefox window resize fails on Wayland/Webrender.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Linux/Wayland only.
  • String changes made/needed: none
Attachment #9104522 - Flags: approval-mozilla-beta?
Attachment #9104522 - Attachment description: Bug 1589114 [Watland] Set widget EGL window size for WebRender, r=sotaro → Bug 1589114 [Wayland] Set widget EGL window size for WebRender, r=sotaro

Legend.

Comment on attachment 9104522 [details]
Bug 1589114 [Wayland] Set widget EGL window size for WebRender, r=sotaro

Minimal patch for a bug in a linux/webrender/wayland combo, low risk, uplift approved for 71 beta 6, thanks.

Attachment #9104522 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

This is considered fixed??

(In reply to Marko from comment #22)

Created attachment 9105971 [details]
Screenshot from 2019-11-02 14-25-13.png

This is considered fixed??

I don't use gnome, but it's working correctly for me in sway now.

Comment 22 looks like Bug 1593408.

Working for me in sway as well on FF71b6

This is also not working for me in sway for FF71 release. The blue is the background image. The input is not displaced like the output so they don't line up. This is only in fullscreen mode and not floating mode.

See Also: → 1610716
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: