Bug 1589114 [Watland] Set widget EGL window size for WebRender, r=sotaro

Differential Revision: https://phabricator.services.mozilla.com/D50746